@@ -22,6 +22,12 @@ FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 DEALINGS IN THE SOFTWARE.
 "
 
+!Behavior methodsFor: 'testing'!
+
+isClass
+    ^true
+! !
+
 !Behavior methodsFor: 'accessing'!
 
 name
